# cellular-organism-ai

./: .gitignore  README.md  pyproject.toml
src/organism_v01/: __init__.py  ambiguity.py  benchmark_v05.py  benchmark_v06.py  benchmark_v10.py  benchmark_v12.py  benchmark_v13.py  benchmark_v14.py  benchmark_v15.py  benchmark_v16.py  benchmark_v18.py  benchmark_v19.py  cell.py  channels.py  controls.py  diagnose_binding.py  evaluate.py  evaluation.py  injury.py  metrics.py  organism.py  stress.py  tasks.py  train.py  visualize.py
tests/: test_ambiguity.py  test_benchmark_v05.py  test_benchmark_v06.py  test_benchmark_v10.py  test_benchmark_v12.py  test_benchmark_v13.py  test_benchmark_v14.py  test_benchmark_v15.py  test_benchmark_v16.py  test_benchmark_v18.py  test_benchmark_v19.py  test_controls.py  test_diagnose_binding.py  test_injury_visualize.py  test_metrics.py  test_organism.py  test_tasks.py  test_train_curriculum.py
