[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "organism-v01"
version = "0.1.0"
description = "A v0.1 cellular neural organism prototype with generated tasks and live evaluation."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.25",
  "Pillow>=10",
  "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
